@@ -6,6 +6,7 @@
 ===============================================================================
 # Archivist Beta 4                                                            #
 ===============================================================================
+- Format selection in search
 - Removed sideboard cards from draw simulation
 - Option labels changed
 
